--- a/user/index.html
+++ b/user/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body class="default-theme">
+<body class="default-theme no-scroll">
 
     <!-- HEADER::START -->
     <header>
@@ -145,6 +145,7 @@
                                         </li>
 
                                         <li class="nav-item"><a href="events.html">Events</a></li>
+                                        <li class="nav-item"><a href="magazine.html">Magazine</a></li>
                                         <li class="nav-item"><a href="notices.html">Notices</a></li>
                                         <li class="nav-item"><a href="result.html">Result</a></li>
                                         <li class="nav-item"><a href="contact.html">Contact Us</a></li>
@@ -198,7 +199,7 @@
 
 
         <!-- SINGLE_CAROUSEL -->
-        <div class="banner_item" data-background="./img/sliders/04.png">
+        <div class="banner_item" data-background="./img/banner/banner1.jpeg">
             <div class="container">
                 <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-lg-12">
@@ -208,9 +209,9 @@
                             <p>Wonderful environment where children undertakes laborious physical learn and grow. Amet
                                 minim mollit non deserunt ullamco est sit aliqua dolor do amet sin 1.</p>
                             <div class="d-flex align-items-center gap_24 justify-content-center flex-wrap">
-                                <a href="about.html" class="theme_btn min_windth_200">Read
+                                <a href="about.html" class="theme_btn min_windth_150">Read
                                     More</a>
-                                <a href="contact.html" class="theme_line_btn min_windth_200">Contact Us</a>
+                                <a href="contact.html" class="theme_line_btn min_windth_150">Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -219,7 +220,7 @@
         </div>
         <!-- END_SINGLE_CAROUSEL -->
         <!-- SINGLE_CAROUSEL -->
-        <div class="banner_item" data-background="./img/sliders/05.png">
+        <div class="banner_item" data-background="./img/banner/banner2.jpg">
             <div class="container">
                 <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-lg-12">
@@ -229,9 +230,9 @@
                             <p>Wonderful environment where children undertakes laborious physical learn and grow. Amet
                                 minim mollit non deserunt ullamco est sit aliqua dolor do amet sin 2.</p>
                             <div class="d-flex align-items-center gap_24 justify-content-center flex-wrap">
-                                <a href="about.html" class="theme_btn min_windth_200">Read
+                                <a href="about.html" class="theme_btn min_windth_150">Read
                                     More</a>
-                                <a href="contact.html" class="theme_line_btn min_windth_200">Contact Us</a>
+                                <a href="contact.html" class="theme_line_btn min_windth_150">Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -240,7 +241,7 @@
         </div>
         <!-- END_SINGLE_CAROUSEL -->
         <!-- SINGLE_CAROUSEL -->
-        <div class="banner_item" data-background="./img/sliders/06.png">
+        <div class="banner_item" data-background="./img/banner/banner3.jpg">
             <div class="container">
                 <div class="row d-flex align-items-center justify-content-center">
                     <div class="col-lg-12">
@@ -250,9 +251,9 @@
                             <p>Wonderful environment where children undertakes laborious physical learn and grow. Amet
                                 minim mollit non deserunt ullamco est sit aliqua dolor do amet sin 3.</p>
                             <div class="d-flex align-items-center gap_24 justify-content-center flex-wrap">
-                                <a href="about.html" class="theme_btn min_windth_200">Read
+                                <a href="about.html" class="theme_btn min_windth_150">Read
                                     More</a>
-                                <a href="contact.html" class="theme_line_btn min_windth_200">Contact Us</a>
+                                <a href="contact.html" class="theme_line_btn min_windth_150">Contact Us</a>
                             </div>
                         </div>
                     </div>
@@ -415,7 +416,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-3 col-lg-3 col-md-6 ">
-                    <div class="facilites_box d-flex align-items-center mb_30">
+                    <div class="facilites_box d-flex align-items-center mb_30 justify-content-center">
                         <div class="facilites_box_icon">
                             <img height="75" src="./img/counters/01.webp" alt="Icon">
                         </div>
@@ -426,7 +427,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-6 ">
-                    <div class="facilites_box d-flex align-items-center mb_30">
+                    <div class="facilites_box d-flex align-items-center mb_30 justify-content-center">
                         <div class="facilites_box_icon">
                             <img height="75" src="./img/counters/02.webp" alt="Icon">
                         </div>
@@ -437,7 +438,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-6 ">
-                    <div class="facilites_box d-flex align-items-center mb_30">
+                    <div class="facilites_box d-flex align-items-center mb_30 justify-content-center">
                         <div class="facilites_box_icon">
                             <img height="75" src="./img/counters/03.webp" alt="Icon">
                         </div>
@@ -448,7 +449,7 @@
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-6 ">
-                    <div class="facilites_box d-flex align-items-center mb_30">
+                    <div class="facilites_box d-flex align-items-center mb_30 justify-content-center">
                         <div class="facilites_box_icon">
                             <img height="75" src="./img/counters/04.webp" alt="Icon">
                         </div>
@@ -546,7 +547,7 @@
     <!-- EXPLORER_AREA::END  -->
 
     <!-- TEACHING_AREA::START  -->
-    <div class="teaching_area gray_bg section_padding2">
+    <div class="teaching_area gray_bg section_padding">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-8">
@@ -710,7 +711,7 @@
     <!-- BLOG::END  -->
 
     <!-- gallery_area::start  -->
-    <div class="gallery_area section_padding3">
+    <div class="gallery_area section_padding">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-7 col-md-8">
@@ -734,84 +735,84 @@
             </div>
             <div class="row grid">
 
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/340X340.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/340X340.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 1">
+                <div class="col-lg-2 col-md-3 grid-item 1">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/23.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/23.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/22.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/22.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/21.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/21.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 3">
+                <div class="col-lg-2 col-md-3 grid-item 3">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/20.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/20.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 4">
+                <div class="col-lg-2 col-md-3 grid-item 4">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/19.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/19.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/18.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/18.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 1">
+                <div class="col-lg-2 col-md-3 grid-item 1">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/17.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/17.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/16.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/16.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/15.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/15.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 4">
+                <div class="col-lg-2 col-md-3 grid-item 4">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/14.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/14.webp" class="img-fluid" alt="">
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 grid-item 2">
+                <div class="col-lg-2 col-md-3 grid-item 2">
                     <div class="gallery_box mb_30">
                         <a href="./img/gallery/13.webp" class="thumb overflow-hidden popup-image d-block">
                             <img src="./img/gallery/13.webp" class="img-fluid" alt="">
@@ -923,6 +924,13 @@
         </a>
     </div>
     <!--/ UP_ICON -->
+
+    <!-- Overlay Start -->
+    <div id="imageOverlay">
+        <button id="closeBtn" class="btn btn-light btn-sm theme_btn">Close ✖</button>
+        <img src="./img/Notification-A11.jpeg" alt="Centered Image">
+    </div>
+    <!-- Overlay end -->
 
     <!--ALL JS SCRIPTS -->
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
