--- a/user/index.html
+++ b/user/index.html
@@ -194,77 +194,15 @@
 
     <!-- BANNER::START  -->
     <div class="banner_area banner_active owl-carousel">
-
-
-
-
         <!-- SINGLE_CAROUSEL -->
-        <div class="banner_item" data-background="./img/banner/banner1.jpeg">
-            <div class="container">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-lg-12">
-                        <div
-                            class="banner_text text-center d-flex justify-content-center align-items-center  flex-column">
-                            <h3>Let’s Build Your Future With Onest Shooled 1</span></h3>
-                            <p>Wonderful environment where children undertakes laborious physical learn and grow. Amet
-                                minim mollit non deserunt ullamco est sit aliqua dolor do amet sin 1.</p>
-                            <div class="d-flex align-items-center gap_24 justify-content-center flex-wrap">
-                                <a href="about.html" class="theme_btn min_windth_150">Read
-                                    More</a>
-                                <a href="contact.html" class="theme_line_btn min_windth_150">Contact Us</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="banner_item" data-background="./img/banner/banner1.jpeg"></div>
         <!-- END_SINGLE_CAROUSEL -->
         <!-- SINGLE_CAROUSEL -->
-        <div class="banner_item" data-background="./img/banner/banner2.jpg">
-            <div class="container">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-lg-12">
-                        <div
-                            class="banner_text text-center d-flex justify-content-center align-items-center  flex-column">
-                            <h3>Let’s Build Your Future With Onest Shooled 2</span></h3>
-                            <p>Wonderful environment where children undertakes laborious physical learn and grow. Amet
-                                minim mollit non deserunt ullamco est sit aliqua dolor do amet sin 2.</p>
-                            <div class="d-flex align-items-center gap_24 justify-content-center flex-wrap">
-                                <a href="about.html" class="theme_btn min_windth_150">Read
-                                    More</a>
-                                <a href="contact.html" class="theme_line_btn min_windth_150">Contact Us</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="banner_item" data-background="./img/banner/banner2.jpg"></div>
         <!-- END_SINGLE_CAROUSEL -->
         <!-- SINGLE_CAROUSEL -->
-        <div class="banner_item" data-background="./img/banner/banner3.jpg">
-            <div class="container">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-lg-12">
-                        <div
-                            class="banner_text text-center d-flex justify-content-center align-items-center  flex-column">
-                            <h3>Let’s Build Your Future With Onest Shooled 3</span></h3>
-                            <p>Wonderful environment where children undertakes laborious physical learn and grow. Amet
-                                minim mollit non deserunt ullamco est sit aliqua dolor do amet sin 3.</p>
-                            <div class="d-flex align-items-center gap_24 justify-content-center flex-wrap">
-                                <a href="about.html" class="theme_btn min_windth_150">Read
-                                    More</a>
-                                <a href="contact.html" class="theme_line_btn min_windth_150">Contact Us</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="banner_item" data-background="./img/banner/banner3.jpg"></div>
         <!-- END_SINGLE_CAROUSEL -->
-
-
-
-
     </div>
     <!-- BANNER::END  -->
 
@@ -472,23 +410,17 @@
     <div class="statement_area section_padding">
         <div class="container">
             <div class="row">
-                <div class="col-xl-7 col-lg-6 col-md-6">
-                    <div class="statement_info mb_30">
-                        <h3>Statement Of Onest Schooleded</h3>
-
-                        <ul class="statement_lists">
-
-
-
-                        </ul>
-                        <a href="about.html" class="theme_btn">Learn More</a>
-                    </div>
+                <div class="col-xl-6 col-lg-6 col-md-6">
                 </div>
-                <div class="col-xl-5 col-lg-5 col-md-6">
-                    <div class="accreditation_wrapper mb_30">
-                        <div class="thumb">
-                            <img src="./img/accreditation/accreditation.webp" alt="Image" class="img-fluid">
+                <div class="col-xl-6 col-lg-6 col-md-6">
+                    <div>
+                        <div class="section-header">
+                            <h2>Apply for Admission</h2>
+                            <p>Fall 2019 applications are now open</p>
                         </div>
+                        <p class="description">We don’t just give students an education and experiences that set them up for success in a career. We help them succeed
+                        in their career—to discover a field they’re passionate about and dare to lead it.</p>
+                        <a href="#" class="theme_btn">Apply Now</a>
                     </div>
                 </div>
             </div>
